--- a/public/style.css
+++ b/public/style.css
@@ -62,9 +62,23 @@ body {
 }
 
 .heading-and-search-bar {
-  width: 600px;
+  float: left;
+  width: 45%;
   text-align: center;
   margin: 2em;
+}
+
+.box-containing-user-list {
+  font-family: 'Lobster', cursive;
+  float: right;
+  margin-right: 5%;
+  margin-top: 5%;
+  height: 600px;
+  width: 45%;
+  border-radius: 70px;
+  background-color: #DDDEDE;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .page-description {
@@ -77,7 +91,7 @@ body {
 }
 
 img {
-  height: 350px;
+  width: 70%;
 }
 
 .user-images {
@@ -106,7 +120,7 @@ input {
   font-family: 'Lobster', cursive;
   font-size: 20px;
   height: 40px;
-  width: 400px;
+  width: 45%;
   color: #FF2211;
   border-style: solid;
   border-color: #FF2211;
@@ -124,19 +138,6 @@ input {
   border-width: 2px;
   border-color: #FF2211;
   border-radius: 20%;
-}
-
-.box-containing-user-list {
-  font-family: 'Lobster', cursive;
-  position: absolute;
-  top: 30px;
-  right: 100px;
-  height: 600px;
-  width: 500px;
-  border-radius: 30%;
-  background-color: #DDDEDE;
-  overflow: hidden;
-  overflow-y: scroll;
 }
 
 .list-of-users {
@@ -176,6 +177,27 @@ a.all-links:hover{
   -webkit-animation:wiggle .3s 2;
   animation:wiggle .3s 2;
   color: #FF2211;
+}
+
+@media (max-width: 975px) {
+
+  .heading-and-search-bar {
+    float: center;
+    width: 100%;
+  }
+
+  .box-containing-user-list {
+    float: center;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 400px;
+    width: 80%;
+  }
+
+  img {
+    width: 60%;
+  }
 }
 
 </style>
